style.css
/* Importing proxima nova */
@font-face {
    font-family: "proxima_nova_rgregular";
    src: url("https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot");
    src: url("https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot?#iefix") format("embedded-opentype"),
        url("https://litmus.com/fonts/Emails/proximanova-regular-webfont.woff") format("woff"),
        url("https://litmus.com/fonts/Emails/proximanova-regular-webfont.ttf") format("truetype"),
        url("https://litmus.com/fonts/Emails/proximanova-regular-webfont.svg#proxima_nova_rgregular") format("svg");
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "proxima_nova_rgbold";
    src: url("https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot");
    src: url("https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot?#iefix") format("embedded-opentype"),
        url("https://litmus.com/fonts/Emails/proximanova-bold-webfont.woff") format("woff"),
        url("https://litmus.com/fonts/Emails/proximanova-bold-webfont.ttf") format("truetype"),
        url("https://litmus.com/fonts/Emails/proximanova-bold-webfont.svg#proxima_nova_rgbold") format("svg");
    font-weight: normal;
    font-style: normal;
}


/* Setting font-family for heading */
h1 {
    font-family: "proxima_nova_rgbold", Helvetica, Arial, sans-serif;
}


/* Removing default margining and padding */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


/* Variable declaration */
/* style for light mode */
:root {
    --primary-color: #F14A16;
    --secondary-color: #370665;
    --heading-font-size: 65px;
    --subheading-font-size: 64px;
    --content-font-size: 32px;
    --primary-border-radius: 25px;
    --btn-border-radius: 20px;
    --primary-text-color: #FFF;

    /* Card common variable */
    --card-border-radius: 50px;
    --card-heading-font-size: 26px;
    --card-font-weight: 400;
    --card-content-font-size: 18px;
    --card-line-height: 36px;
    --card-color-white: #FFF;
    --card-color-black: black;


    /* Common btn variable */
    --btn-border-radius: 20px;
    /* Popular trends section variable */
    --popular-card-width: 376px;
    --popular-card-height: 696px;
    --popular-card-border: 1px solid #FFF;
    --popular-card-heading-padding-bottom: 8px;
    --popular-card-background: linear-gradient(164deg, rgba(255, 255, 255, 0.70) 0%, rgba(255, 255, 255, 0.10) 100.82%);
    --popular-card-border: 1px solid #FFF;
    --popular-card-box-shadow: 5px 10px 18px 0px rgba(0, 0, 0, 0.25);


    /* New Arrivals section variable */
    --arrival-card-width: 501px;
    --arrival-card-height: 414.701px;
    --arrival-card-border: 5px solid #35589A;
    --arrival-card-background: #370665;
    --arrival-heading-padding-bottom: 10.2px;

    /* Price variables */
    --price-color: #FC9918;
    --price-font-weight: 400;
    --price-line-height: 36px;
    --price-letter-spacing: 0.56px;
    --price-font-size: 28px;
    --price-padding-top: 14px;
    --price-padding-bottom: 19px;
    --price-padding-left: 22px;


    /* Login button variable */
    --login-width: 127px;
    --login-height: 52px;
    --login-border: 1px solid #F14A16;
    --login-padding: 14px 35px 14px 38px;
    --login-border-radius: 15px;
    --login-border: 1px solid #F14A16;
    --login-font-size: 20px;
    --login-font-weight: 700;
    --login-letter-spacing: 0.8px;

    /* Add to cart variable */
    --addtocart-width: 150px;
    --addtocart-height: 45px;
    --addtocart-border: 3px solid #F14A16;
    --addtocart-text-color: #F14A16;
}

/* Setting default background color */
body,
button {
    font-family: "proxima_nova_rgregular", Helvetica, Arial, sans-serif;
    background-color: #FFF;
    overflow-x: hidden;
}

/* dark mode style */
.dark__mode {
    background-color: #070606;
    color: var(--primary-text-color);
}

/* Changing color of all p and li tag */
body.dark__mode p,
body.dark__mode ul li {
    color: var(--primary-text-color);
}


/* Changing background color input search */
.upper__container__input__search {
    color: #6c6969;
    background: var(--primary-text-color);
}


/* hiding element on big devices */
.show__on__small {
    display: none;
}


/* upper container style */
.upper__container {
    position: relative;
    width: 100%;
    height: 100%;
    background-image: url("./assets/backgroundImage.png");
    background-repeat: no-repeat;
    background-position: right;
    background-size: contain;
    overflow: hidden;
    margin-bottom: 100px;
    padding: 20px 90px 0px 90px;
}

.upper__container__left__gradient,
.upper__container__right__gradient {
    display: none;
}

.upper__container__left__gradient img {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: -1;
}

.upper__container__right__gradient img {
    position: absolute;
    top: -300px;
    right: -70px;
    z-index: -1;
    opacity: 0.6;
    width: 954px;
    height: 954px;
    flex-shrink: 0;
    border-radius: 954px;
    background: #451474;
    filter: blur(1000px);
}


.upper__container__navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 6px;
}

.upper__container__navbar__right__item ul {
    display: flex;
    gap: 50px;
    align-items: center;
}

.upper__container__navbar__right__item ul li {
    list-style-type: none;
}


.upper__container__input {
    text-align: center;
    margin-top: 30px;
    margin-bottom: 32px;
}

.upper__container__input__container {
    position: relative;
}

.upper__container__input input {
    color: #858585;
    padding: 14px 70px 14px 38px;
    font-size: 16px;
    border-radius: 30px;
    border: none;
    box-shadow: 4px 6px 8px 0px #00000040;
    width: 100%;
}

.upper__container__input img {
    position: absolute;
    top: 12px;
    left: 12px;
    width: 20px;
}
/* ... */

